--- a/space-tourism-website-main/starter-code/public/index.html
+++ b/space-tourism-website-main/starter-code/public/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     
-    <h1>start</h1>
+    <nav class="home-nav">
+        <ul>
+            <li><a href="#home"> <span>00</span> Home</a></li>
+            <li><a href="#news"> <span>00</span> News</a></li>
+            <li><a href="#contact"> <span>00</span> Contact</a></li>
+            <li><a href="#about"> <span>00</span> About</a></li>
+          </ul>
+    </nav>
 
 </body>
 </html>
