--- a/space-tourism-website-main/starter-code/public/index.html
+++ b/space-tourism-website-main/starter-code/public/index.html
@@ -8,15 +8,22 @@
     <title>Space tourism multi-page website</title>
 </head>
 <body>
-    
-    <nav class="home-nav">
-        <ul>
-            <li><a href="#home"> <span>00</span> Home</a></li>
-            <li><a href="#news"> <span>01</span> News</a></li>
-            <li><a href="#contact"> <span>02</span> Contact</a></li>
-            <li><a href="#about"> <span>03</span> About</a></li>
+    <div class="container">
+        
+        <nav>
+
+            <div class="logo leftnav">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#FFF"/><path fill="#0B0D17" d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"/></g></svg>
+              </div>
+
+          <ul>
+          <li>Home</li>
+          <li>Services</li>
+          <li>Products</li>
+          <li>Clients</li>
           </ul>
-    </nav>
+          </nav>
+        </div>
 
 </body>
 </html>
