--- a/space-tourism-website-main/starter-code/public/index.html
+++ b/space-tourism-website-main/starter-code/public/index.html
@@ -8,22 +8,21 @@
     <title>Space tourism multi-page website</title>
 </head>
 <body>
-    <div class="container">
-        
-        <nav>
-
-            <div class="logo leftnav">
-                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#FFF"/><path fill="#0B0D17" d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"/></g></svg>
-              </div>
-
-          <ul>
-          <li>Home</li>
-          <li>Services</li>
-          <li>Products</li>
-          <li>Clients</li>
-          </ul>
-          </nav>
-        </div>
+    <nav>
+        <ul>
+            <li class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#FFF"/><path fill="#0B0D17" d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"/></g></svg></a>
+            </li>
+            <li><a href="#"><span>00</span> home</a>
+            </li>
+            <li><a href="#"><span>01</span> destination</a>
+            </li>
+            <li><a href="#"><span>02</span> crew</a>
+            </li>
+            </li>
+            <li><a href="#"><span>04</span> technology</a>
+            </li>
+        </ul>
+      </nav>
 
 </body>
 </html>
