--- a/space-tourism-website-main/starter-code/index.html
+++ b/space-tourism-website-main/starter-code/index.html
@@ -5,11 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+
+  <link rel="stylesheet" href="./style/style.css">
   
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
+  <nav>
+    <ul>
+        <li class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#FFF"/><path fill="#0B0D17" d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"/></g></svg></a>
+        </li>
+        <li><a href="#"><span>00</span> home</a>
+        </li>
+        <li><a href="#"><span>01</span> destination</a>
+        </li>
+        <li><a href="#"><span>02</span> crew</a>
+        </li>
+        </li>
+        <li><a href="#"><span>04</span> technology</a>
+        </li>
+    </ul>
+  </nav>
 
+  <div>
+    
+  </div>
   00 Home
   01 Destination
   02 Crew
