--- a/space-tourism-website-main/starter-code/index.html
+++ b/space-tourism-website-main/starter-code/index.html
@@ -11,37 +11,42 @@
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
+  <div>
   <nav>
     <ul>
         <li class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#FFF"/><path fill="#0B0D17" d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"/></g></svg></a>
         </li>
-        <li><a href="#"><span>00</span> home</a>
+        <li><a href="#"><span>00</span> Home</a>
         </li>
-        <li><a href="#"><span>01</span> destination</a>
+        <li><a href="#"><span>01</span> Destination</a>
         </li>
-        <li><a href="#"><span>02</span> crew</a>
+        <li><a href="#"><span>02</span> Crew</a>
         </li>
         </li>
-        <li><a href="#"><span>04</span> technology</a>
+        <li><a href="#"><span>03</span> Technology</a>
         </li>
     </ul>
   </nav>
-
-  <div>
+</div>
+  <div class="left-text">
     
-  </div>
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+  <h2>So, you want to travel to</h2>
 
-  So, you want to travel to
-  Space
-  Let’s face it; if you want to go to space, you might as well genuinely go to 
+  <h1>Space</h1>
+
+  <p>Let’s face it; if you want to go to space, you might as well genuinely go to 
   outer space and not hover kind of on the edge of it. Well sit back, and relax 
-  because we’ll give you a truly out of this world experience!
+  because we’ll give you a truly out of this world experience!</p>
+  
+  </div>
 
-  Explore
+
+  <div class="right-btn">
+  <button>Explore</button>
+  </div>
+  
+
+  
 
 </body>
 </html>
