--- a/space-tourism-website-main/starter-code/index.html
+++ b/space-tourism-website-main/starter-code/index.html
@@ -30,7 +30,7 @@
 </div>
   <div class="left-text">
     
-  <p>So, you want to travel to</p>
+  <h4>So, you want to travel to</h4>
 
   <h1>Space</h1>
 
