--- a/space-tourism-website-main/starter-code/index.html
+++ b/space-tourism-website-main/starter-code/index.html
@@ -11,23 +11,15 @@
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
-  <div class="navigation">
-  <nav>
-    <ul>
-        <li class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#FFF"/><path fill="#0B0D17" d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"/></g></svg></a>
-        </li>
-        <li><a href="#"><span>00</span> Home</a>
-        </li>
-        <li><a href="#"><span>01</span> Destination</a>
-        </li>
-        <li><a href="#"><span>02</span> Crew</a>
-        </li>
-        </li>
-        <li><a href="#"><span>03</span> Technology</a>
-        </li>
-    </ul>
-  </nav>
-</div>
+  <header class="header">
+		<h1 class="logo"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#FFF"/><path fill="#0B0D17" d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"/></g></svg></a></h1>
+      <ul class="main-nav">
+          <li><a href="#"><span>00</span> Home</a></li>
+          <li><a href="#"><span>01</span> Destination</a></a></li>
+          <li><a href="#"><span>02</span> Crew</a></a></li>
+          <li><a href="#"><span>03</span> Technology</a></a></li>
+      </ul>
+	</header> 
   <div class="left-text">
     
   <h4>So, you want to travel to</h4>
