--- a/space-tourism-website-main/starter-code/index.html
+++ b/space-tourism-website-main/starter-code/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <header class="header">
+    <nav>
 		<h1 class="logo"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#FFF"/><path fill="#0B0D17" d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"/></g></svg></a></h1>
       <ul class="main-nav">
           <li><a href="#"><span>00</span> Home</a></li>
@@ -19,6 +20,7 @@
           <li><a href="#"><span>02</span> Crew</a></a></li>
           <li><a href="#"><span>03</span> Technology</a></a></li>
       </ul>
+    </nav>
 	</header> 
   <div class="left-text">
     
