--- a/space-tourism-website-main/starter-code/assets/crew/crew.html
+++ b/space-tourism-website-main/starter-code/assets/crew/crew.html
@@ -17,7 +17,7 @@
               
                 <ul class="main-nav">
                     <li><a href="../../home.html"><span>00</span> Home</a></li>
-                    <li><a href="./destination.html"><span>01</span> Destination</a></a></li>
+                    <li><a href="../destination/destination.html"><span>01</span> Destination</a></a></li>
                     <li><a href="../crew/crew.html"><span>02</span> Crew</a></a></li>
                     <li><a href="#technology"><span>03</span> Technology</a></a></li>
                 </ul>
