--- a/space-tourism-website-main/starter-code/home.html
+++ b/space-tourism-website-main/starter-code/home.html
@@ -18,9 +18,9 @@
         <div class="border-bottom"></div>
       
         <ul class="main-nav">
-            <li><a href="#home"><span>00</span> Home</a></li>
+            <li><a href="./home.html"><span>00</span> Home</a></li>
             <li><a href="../starter-code/assets/destination/destination.html"><span>01</span> Destination</a></a></li>
-            <li><a href="#crew"><span>02</span> Crew</a></a></li>
+            <li><a href="../starter-code/assets/crew/crew.html"><span>02</span> Crew</a></a></li>
             <li><a href="#technology"><span>03</span> Technology</a></a></li>
         </ul>
     </nav>
