--- a/space-tourism-website-main/starter-code/assets/technology/technology.html
+++ b/space-tourism-website-main/starter-code/assets/technology/technology.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
+
     <div class="container">
         <header class="header">
             <nav>
@@ -19,11 +20,12 @@
                     <li><a href="../../home.html"><span>00</span> Home</a></li>
                     <li><a href="../destination/destination.html"><span>01</span> Destination</a></a></li>
                     <li><a href="../crew/crew.html"><span>02</span> Crew</a></a></li>
-                    <li><a href="../technology/technology.html"><span>03</span> Technology</a></a></li>
+                    <li><a href="./technology.html"><span>03</span> Technology</a></a></li>
                 </ul>
             </nav>
             </header> 
 
     </div>
+    
 </body>
 </html>
