--- a/space-tourism-website-main/starter-code/home.html
+++ b/space-tourism-website-main/starter-code/home.html
@@ -21,7 +21,7 @@
             <li><a href="./home.html"><span>00</span> Home</a></li>
             <li><a href="../starter-code/assets/destination/destination.html"><span>01</span> Destination</a></a></li>
             <li><a href="../starter-code/assets/crew/crew.html"><span>02</span> Crew</a></a></li>
-            <li><a href="#technology"><span>03</span> Technology</a></a></li>
+            <li><a href="./assets/technology/technology.html"><span>03</span> Technology</a></a></li>
         </ul>
     </nav>
 	</header> 
