--- a/space-tourism-website-main/starter-code/destination-moon.html
+++ b/space-tourism-website-main/starter-code/destination-moon.html
@@ -4,17 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="stylesheet" href="../starter-code/assets/destination/style.css">
+
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
-
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-
+  <div class="container">
+    <header class="header">
+      <nav>
+          <h1 class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#FFF"/><path fill="#0B0D17" d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"/></g></svg></h1>
+  
+          <div class="border-bottom"></div>
+        
+          <ul class="main-nav">
+              <li><a href="./home.html"><span>00</span> Home</a></li>
+              <li><a href="../starter-code/destination-moon.html"><span>01</span> Destination</a></a></li>
+              <li><a href="../starter-code/assets/crew/crew.html"><span>02</span> Crew</a></a></li>
+              <li><a href="./assets/technology/technology.html"><span>03</span> Technology</a></a></li>
+          </ul>
+      </nav>
+    </header> 
+  </div>
   01 Pick your destination
 
   Moon
