--- a/space-tourism-website-main/starter-code/destination-moon.html
+++ b/space-tourism-website-main/starter-code/destination-moon.html
@@ -51,11 +51,11 @@
         regain perspective and come back refreshed. While you’re there, take in some history 
         by visiting the Luna 2 and Apollo 11 landing sites.
         </p>
-        Avg. distance
-        384,400 km
+          <div class="last-text">
+            <p class="last-par left-par"><span class="last-span">Avg. distance</span> 384,400 km</p> 
       
-        Est. travel time
-        3 days
+           <p class="last-par right-par"><span class="last-span">Est. travel time</span> 3 days</p> 
+          </div>
         </div>
   </div>
  
