--- a/space-tourism-website-main/starter-code/destination-moon.html
+++ b/space-tourism-website-main/starter-code/destination-moon.html
@@ -38,8 +38,8 @@
       <div class="right-text">
         
         <ul class="small-nav">
-          <li><a href="#" class="desti-nav">Moon</a></li>
-          <li><a href="#" class="desti-nav">Mars</a></li>
+          <li><a href="../starter-code/destination-moon.html" class="desti-nav">Moon</a></li>
+          <li><a href="../starter-code/destination-mars.html" class="desti-nav">Mars</a></li>
           <li><a href="#" class="desti-nav">Europa</a></li>
           <li><a href="#" class="desti-nav">Titan</a></li>
       </ul>
