--- a/space-tourism-website-main/starter-code/destination-europa.html
+++ b/space-tourism-website-main/starter-code/destination-europa.html
@@ -42,7 +42,7 @@
           <li><a href="../starter-code/destination-moon.html" class="desti-nav">Moon</a></li>
           <li><a href="../starter-code/destination-mars.html" class="desti-nav">Mars</a></li>
           <li><a href="../starter-code/destination-europa.html" class="desti-nav">Europa</a></li>
-          <li><a href="#" class="desti-nav">Titan</a></li>
+          <li><a href="../starter-code/destination-titan.html" class="desti-nav">Titan</a></li>
       </ul>
         
       <h1>Europa</h1>
