--- a/space-tourism-website-main/starter-code/destination-titan.html
+++ b/space-tourism-website-main/starter-code/destination-titan.html
@@ -22,8 +22,8 @@
           <ul class="main-nav">
               <li><a href="./home.html" class="header-nav"><span>00</span> Home</a></li>
               <li><a href="../starter-code/destination-moon.html" class="header-nav"><span>01</span> Destination</a></a></li>
-              <li><a href="../starter-code/assets/crew/crew.html" class="header-nav"><span>02</span> Crew</a></a></li>
-              <li><a href="./assets/technology/technology.html" class="header-nav"><span>03</span> Technology</a></a></li>
+              <li><a href="../starter-code/crew-commander.html" class="header-nav"><span>02</span> Crew</a></a></li>
+              <li><a href="../starter-code/technology-capsule.html" class="header-nav"><span>03</span> Technology</a></a></li>
           </ul>
       </nav>
     </header> 
